# UT_GerryChain

./: .gitignore  01_compile_blocks.py  01_configure_sampling.ipynb  02_compile_precincts.py  02_run_ensemble.ipynb  02_run_ensemble.py  03_configure_sampling.ipynb  03_run_ensemble.py  04_run_ensemble.py  LICENSE  README.md  UTC_20A-19-S103.xml  cong_equalpop.py  create_geojson.py  disaggregate_2024_elections.py  gerrychain_playground.ipynb  investigate_water_barriers.py  nb01_configure_sampling.py  nb02_run_ensemble.py  notebook_updated_cells.py  prop4_criteria.ipynb  prop4_criteria.py  prop4_criteria_script.py  pyproject.toml  requirements.txt  test_error.py  test_optimization.py  test_plan_contiguity.py  test_refactor_config.py  test_transitability.py  visualize_transitability_steps.py
data/: 00_disaggregate_2024_elections.py  01_compile_blocks.py  02_compile_precincts.py  03_compile_block_groups.py  NOTICE  UT_blocks_transitability.csv  UT_capped_1000_transitability.csv  UT_capped_100_transitability.csv  UT_capped_200_transitability.csv  UT_capped_500_transitability.csv  UT_capped_d29_eps1e-3_transitability.csv  UT_capped_d4_eps1e-3_transitability.csv  UT_capped_d75_eps1e-3_transitability.csv  UT_vtd_parts_transitability.csv  UT_vtds_transitability.csv
legacy/: build.py  reporting.py
maps/: README.txt
test/: __init__.py  test_chain.py  test_configuration_manager.py  test_cong_equalpop.py  test_geography_manager.py  test_plotting.py
tests/: test_ensemble_cli.py
utgc/: __init__.py  build.py  chain.py  configuration.py  data_io.py  ensemble.py  geography.py  (+13 more)
(+103 files in other folders)
